outputs/tsp_constructive-constructive/ab-mcts-ahd/2025-09-22_21-21-05/evaluations/problem_eval-7301212214307728351_stdout.txt
Traceback (most recent call last):
  File "D:\MCTS-AHD-master\problems\tsp_constructive\eval.py", line 11, in <module>
    from gpt import select_next_node_v2 as select_next_node
  File "D:\MCTS-AHD-master\problems\tsp_constructive\gpt.py", line 1
    importance based on remaining nodes, favoring exploration early and exploitation later with a different penalty structure for path efficiency.}
                                                                                                                                                  ^
SyntaxError: unmatched '}'

During handling of the above exception, another exception occurred:

Traceback (most recent call last):
  File "D:\MCTS-AHD-master\problems\tsp_constructive\eval.py", line 13, in <module>
    from gpt import select_next_node
  File "D:\MCTS-AHD-master\problems\tsp_constructive\gpt.py", line 1
    importance based on remaining nodes, favoring exploration early and exploitation later with a different penalty structure for path efficiency.}
                                                                                                                                                  ^
SyntaxError: unmatched '}'
